<resources>
    <string name="app_name">calculator</string>
    <string name="action_settings">Settings</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>
    <string name="first_number">FirstNumber</string>
    <string name="second_number">SecondNumber</string>
    <string name="hint_number">455555</string>
    <string name="title_maths_operation">MathsOperations</string>
</resources>
